GROW-632 prevent wiki-content to overflow under sidebar

--- a/themes/grow-theme/src/css/grow/_wiki.scss
+++ b/themes/grow-theme/src/css/grow/_wiki.scss
@@ -122,6 +122,8 @@
 		  	}
 	
 			.wiki-content {
+				overflow: auto;
+
 				a {
 						color: $skincolor;
 				}
